<resources>
    <string name="app_name">Yum</string>
    <string name="todo">TODO</string>
    <string name="login_with_phone_number">Login with Phone Number</string>
    <string name="login_with_facebook">Login with Facebook</string>
    <string name="ernest_khalimov">Ernest Khalimov</string>
    <string name="_31_male">31 - Male</string>

    <string name="get_code">Get code</string>
    <string name="verify_code">Verify Code</string>
    <string name="verification_code_sent">Verification code set successfully</string>
    <string name="logged_in_successfully">Logged in Successfully</string>
    <string name="otp_description_text">After Sending the code, you will receive a message in your phone, put code in the box below</string>
    <string name="otp_code_text">Introduce Phone Number</string>
    <string name="title_chat">Chats</string>
    <string name="title_matches">Matches</string>
    <string name="title_profile">Profile</string>

    <string name="facebook_app_id">337209048055201</string>
    <string name="fb_login_protocol_scheme">fb337209048055201</string>
    <string name="err_enter_phone_number">Please enter phone Number</string>
    <string name="err_enter_code">Please enter code you received on your mobile number</string>
    <string name="logout">Logout</string>
    <string name="india">+91</string>
    <string name="canada">+1</string>
    <string name="first_name_label">First Name</string>
    <string name="last_name_lbl">Last Name</string>
    <string name="date_birth_lbl">Date of Birth</string>
    <string name="gender_lbl">Gender</string>
    <string name="sex_pref_lbl">Sexual orientation</string>
    <string name="about_me_title_1">Cooking your profile!</string>
    <string name="about_me_subtitle_1">Enter the following information about you:</string>
    <string name="about_me_info_1">After confirming your basic information we are going to ask your interests and what kind of food you like</string>
    <string name="about_me_title_3">What do you like to talk about?</string>
    <string name="about_me_subtitle_3">Eating is not only about food, but the connections we make with the people we eat with! Choose your favourite topics.</string>
    <string name="interest_topics">I like to talk about</string>
    <string name="topic_1">Art</string>
    <string name="topic_2">Movies</string>
    <string name="topic_3">Gym</string>
    <string name="topic_4">Politics</string>
    <string name="confirm_button">Confirm</string>
    <string name="about_me_title_2">Let"s talk about the food you like!</string>
    <string name="about_me_subtitle_2">Choose from the options below, if you have something that is not in the list click on the "Add" to add it. Choose at least 3</string>
    <string name="taste_options">I enjoy eating</string>
    <string name="general_preference">In general, what are your preferences in taste?</string>
    <string name="option_1">Sushi</string>
    <string name="option_2">Ramen</string>
    <string name="option_3">Halal</string>
    <string name="option_4">Dessert</string>
    <string name="option_5">Coffee</string>
    <string name="option_6">Italian</string>
    <string name="option_7">Ceviche</string>
    <string name="preference_1">Sweat</string>
    <string name="preference_2">Salty</string>
    <string name="preference_3">Spicy</string>
    <string name="next">Next</string>
    <string name="i_enjoy_eating">I enjoy eating</string>
    <string name="confirm">Confirm</string>
    <string name="about_me">About me</string>
    <string name="name">Name</string>
    <string name="age">Age</string>
    <string name="gender">Gender</string>
    <string name="err_first_name_empty">First name field empty</string>
    <string name="err_last_name_empty">Last name field empty</string>
    <string name="err_dob_name_empty">Date of Birth field empty</string>
    <string name="err_enjoy_eating_name_empty">"I enjoy eating" field empty</string>
    <string name="err_talk_about_empty">"I like to talk about" field empty</string>
    <string name="err_preferences_taste_name_empty">"Preferences in taste" field empty</string>
    <string name="error_saving_user">Error saving user into the Database</string>
    <string name="error_saving_eating">Error saving enjoy eating into the Database</string>
    <string name="error_saving_tastes">Error saving preference for tastes into the Database</string>
    <string name="error_saving_interest">Error saving interest into the Database</string>
    <string name="error_saving_not_talk">Error saving not talk preference into the Database</string>
    <string name="error_saving_not_eat">Error saving not eat preference into the Database</string>
    <string name="error_saving_finish_profile">Error saving Finish profile into the Database</string>
    <string name="err_not_eat_about_empty">"I rather not eat" field empty</string>
    <string name="err_not_talk_about_empty">"I rather not talk" field empty</string>
    <string name="err_enjoy_eating_chip_empty">Please select at least 1 preference to eat</string>
    <string name="err_enjoy_taste_chip_empty">Please select at least 1 preference for taste</string>
    <string name="err_interest_chip_empty">Please select at least 1 preference to talk</string>
    <string name="err_not_eat_chip_empty">Please select at least 1 preference to not eat</string>
    <string name="err_not_talk_chip_empty">Please select at least 1 preference to not talk</string>
    <string name="err_about_me_empty">"About me" field empty</string>
    <string name="err_profile_image_empty">Profile image not uploaded</string>
    <string name="err_city_name_empty">City name not entered</string>
    <string name="err_city_not_found">City name not found</string>
    <string name="err_fetching_data">Error fetching data, please come again after few minutes</string>
    <string name="error_updating_user">Error updating user into the Database</string>
    <string name="success_updating_user">User data updated successfully</string>
    <string name="not_more_than_2_images">No more than 2 images can be uploaded</string>

    <string name="title_about_me">About Me</string>
    <string name="title_finish_profile">Finishing Up Profile</string>
    <string name="title_food_topics">No-to Food and Topics</string>
    <string name="title_interests">Interests</string>
    <string name="title_tastes">Tastes</string>
    <string name="default_notification_channel_id">channel_id</string>
    <string name="like_taste">I prefer taste</string>
    <string name="i_rather_not_eat">I rather not eat</string>
    <string name="i_rather_not_talk_about">I rather not talk about</string>
    <string name="disliked_food">What foods are you really not interested in?</string>
    <string name="disliked_topic">What topics you dont talk about while eating?</string>
    <string name="dislike_talking">To enjoy a meal and a conversation, people need to talk about the things they like. Let others know what topics spoils your taste</string>
    <string name="dislike_eating">It can be really awkward if you are eating with someone and that person never touches its food. Lets do something about that, select what you dont like</string>
    <string name="info_btn"><u>More Info</u></string>
    <string name="pro_preference">Preference</string>
    <string name="pro_add_image">Add picture</string>
    <string name="pro_Settings">Settings</string>
    <string name="likes">Likes</string>
    <string name="topics">Topics</string>
    <string name="don_t_eat">Don\'t Eat</string>
    <string name="don_t_enjoy_talking_about">Don\'t enjoy talking about</string>
    <string name="report_user">Report user</string>
    <string name="payment_plan">Payment Plans: Subscription</string>
    <string name="acc_settings">Account Settings</string>
    <string name="ph_no">Phone Number : </string>
    <string name="disc_settings">Discovery Settings</string>
    <string name="location">Location</string>
    <string name="my_location">My Location</string>
    <string name="add_new_loc">Add a new location</string>
    <string name="similar_taste">Similar Taste</string>
    <string name="similar_topics">Similar Topics</string>
    <string name="at_least">At least</string>
    <string name="between">Between</string>
    <string name="i_am_looking">I am looking for</string>
    <string name="distance">Maximum Distance</string>
    <string name="err_db">Database error</string>
    <string name="send">send</string>
    <string name="type_your_message">Type your message</string>
    <string name="initial_chat_message">Hello</string>
    <string name="report_user_dialog_title">Report ##Username##</string>
    <string name="report_user_dialog_message">Do you really want to Report this user?</string>
    <string name="report_user_action">Report</string>
    <string name="cancel_action">Cancel</string>
    <string name="report_confirmation">The user was reported and will not appear on you match screen again</string>
    <string name="new_like">New Like Received</string>
    <string name="or">OR</string>
    <string name="phone_updated_successfully">Phone number Updated Successfully</string>
    <string name="age_prefer">Age Preference</string>
    <string name="current_location">Current Location</string>
    <string name="add_more_locations">Add More Location</string>
    <string name="update">Update</string>
    <string name="apply_changes">Apply changes</string>
    <string name="edit_settings">Edit Settings</string>
    <string name="i_like_to_talk_about">I like to talk about</string>
    <string name="enjoys_in_general">Enjoys in general</string>
    <string name="enjoys_eating">Enjoys eating</string>
    <string name="eating_preference">Eating Preference</string>
    <string name="taste_preference">Taste Preference</string>
    <string name="talk_preference">Talk Preference</string>
    <string name="no_eat_preference">No Eat Preference</string>
    <string name="no_talk_preference">No Talk Preference</string>
    <string name="minimum_age">Minimum age</string>
    <string name="maximum_age">Maximum age</string>
    <string name="available">Available</string>
    <string name="status_updated_sucessfully">"Status Updated Successfully "</string>
    <string name="delete_chat_dialog_title">Delete chat</string>
    <string name="delete_chat_dialog_description">Do you want to delete this chat?</string>
    <string name="delete_chat_dialog_confirm">Delete</string>
    <string name="delete_chat_success">Deleted chat</string>
    <string name="show_online_status">Show online status</string>

</resources>