<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_matches">

    <fragment
        android:id="@+id/navigation_profile"
        android:name="madt.capstone_codingcomrades_yum.profile"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/navigation_matches"
        android:name="madt.capstone_codingcomrades_yum.matches"
        android:label="@string/title_matches"
        tools:layout="@layout/fragment_matches" />

    <fragment
        android:id="@+id/navigation_chat"
        android:name="madt.capstone_codingcomrades_yum.chat"
        android:label="@string/title_chat"
        tools:layout="@layout/fragment_chat" />


</navigation>