<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".createprofile.AboutMeActivity">

    <data></data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:background="@color/white"
        android:orientation="vertical">

        <madt.capstone_codingcomrades_yum.utils.YumTopBar
            android:id="@+id/topBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="@dimen/_6sdp" />

        <ScrollView
            android:id="@+id/sv1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context=".splash.SplashActivity">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/segoe_ui"
                    android:text="@string/about_me_title_1"
                    android:textSize="20sp"
                    tools:layout_editor_absoluteX="111dp"
                    tools:layout_editor_absoluteY="16dp" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/segoe_ui"
                    android:text="@string/about_me_subtitle_1"
                    tools:layout_editor_absoluteX="72dp"
                    tools:layout_editor_absoluteY="72dp" />

                <EditText
                    android:id="@+id/firstNameET"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:fontFamily="@font/segoe_ui"
                    android:inputType="textPersonName"
                    tools:layout_editor_absoluteX="31dp"
                    tools:layout_editor_absoluteY="134dp" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/segoe_ui"
                    android:text="@string/first_name_label"
                    tools:layout_editor_absoluteX="35dp"
                    tools:layout_editor_absoluteY="107dp" />

                <EditText
                    android:id="@+id/lastNameET"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:fontFamily="@font/segoe_ui"
                    android:inputType="textPersonName"
                    tools:layout_editor_absoluteX="36dp"
                    tools:layout_editor_absoluteY="227dp" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/segoe_ui"
                    android:text="@string/date_birth_lbl"
                    tools:layout_editor_absoluteX="37dp"
                    tools:layout_editor_absoluteY="283dp" />

                <EditText
                    android:id="@+id/dobET"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:fontFamily="@font/segoe_ui"
                    android:inputType="date"
                    tools:layout_editor_absoluteX="37dp"
                    tools:layout_editor_absoluteY="302dp" />

                <Spinner
                    android:id="@+id/genderSp"
                    android:layout_width="332dp"
                    android:layout_height="52dp"
                    tools:layout_editor_absoluteX="37dp"
                    tools:layout_editor_absoluteY="369dp" />

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/segoe_ui"
                    android:text="@string/gender_lbl"
                    tools:layout_editor_absoluteX="44dp"
                    tools:layout_editor_absoluteY="350dp" />

                <Spinner
                    android:id="@+id/sexPrefSp"
                    android:layout_width="365dp"
                    android:layout_height="51dp"
                    tools:layout_editor_absoluteX="35dp"
                    tools:layout_editor_absoluteY="449dp" />

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/segoe_ui"
                    android:text="@string/sex_pref_lbl"
                    tools:layout_editor_absoluteX="35dp"
                    tools:layout_editor_absoluteY="430dp" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/segoe_ui"
                    android:text="@string/last_name_lbl"
                    tools:layout_editor_absoluteX="35dp"
                    tools:layout_editor_absoluteY="204dp" />

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="269dp"
                    android:layout_height="76dp"
                    android:fontFamily="@font/segoe_ui"
                    android:text="@string/about_me_info_1"
                    tools:layout_editor_absoluteX="72dp"
                    tools:layout_editor_absoluteY="517dp" />

                <Button
                    android:id="@+id/button2"
                    android:layout_width="181dp"
                    android:layout_height="69dp"
                    android:backgroundTint="@color/red_log"
                    android:fontFamily="@font/segoe_ui_bold"
                    android:text="Button"
                    android:textColor="@color/background_white"
                    tools:layout_editor_absoluteX="119dp"
                    tools:layout_editor_absoluteY="593dp" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>
    </LinearLayout>
</layout>