<?xml version="1.0" encoding="utf-8"?>

<layout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".login.LoginWithPhoneNumberActivity">

    <data></data>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:orientation="vertical"
        android:background="@color/white">


        <madt.capstone_codingcomrades_yum.utils.YumTopBar
            android:id="@+id/topBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="@dimen/_6sdp" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/segoe_ui"
            android:text="@string/otp_code_text"/>



        <com.alimuzaffar.lib.pin.PinEntryEditText
            android:id="@+id/txt_phn_entry"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:cursorVisible="false"
            android:digits="1234567890"
            android:inputType="number"
            android:maxLength="10"
            android:textIsSelectable="false"
            android:textSize="20sp"
            app:pinLineColors="@color/black" />
        <Button
            android:id="@+id/btnGetCode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_16sdp"
            android:text="@string/get_code"
            android:textColor="@color/white"
            android:fontFamily="@font/segoe_ui_bold"
            android:background="@drawable/custom_rounded_corners"
            app:layout_constraintHorizontal_bias="0.5" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="149dp"
            android:layout_marginBottom="15dp"
            android:fontFamily="@font/segoe_ui"
            android:text="@string/otp_description_text" />


        <com.alimuzaffar.lib.pin.PinEntryEditText
            android:id="@+id/txt_code_entry"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:cursorVisible="false"
            android:digits="1234567890"
            android:inputType="number"
            android:maxLength="6"
            android:textIsSelectable="false"
            android:textSize="20sp"
            app:pinLineColors="@color/black" />

        <Button
            android:id="@+id/btnVerifyCode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16.00dp"
            android:background="@drawable/custom_rounded_corners"
            android:fontFamily="@font/segoe_ui_bold"
            android:text="@string/verify_code"
            android:textColor="@color/white"
            app:layout_constraintHorizontal_bias="0.5" />


    </LinearLayout>
        </layout>