<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".createprofile.FinishProfileActivity">

    <data></data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:background="@color/white"
        android:orientation="vertical">

        <madt.capstone_codingcomrades_yum.utils.YumTopBar
            android:id="@+id/topBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="@dimen/_6sdp" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context=".splash.SplashActivity">

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="@dimen/_300sdp"
                    android:layout_height="@dimen/_250sdp"

                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:srcCompat="@tools:sample/avatars" />

                <TextView
                    android:id="@+id/tvUserName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_15sdp"
                    android:layout_marginTop="@dimen/_25sdp"
                    android:fontFamily="@font/segoe_ui_bold"
                    android:text="@string/name"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_18sdp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/imageView2" />

                <TextView
                    android:id="@+id/tvAge"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:fontFamily="@font/segoe_ui"
                    android:text="@string/age"
                    android:textSize="@dimen/_14sdp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="@+id/tvUserName"
                    app:layout_constraintTop_toBottomOf="@+id/tvUserName" />

                <TextView
                    android:id="@+id/tvGender"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:fontFamily="@font/segoe_ui"
                    android:text="@string/gender"
                    android:textSize="@dimen/_14sdp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toEndOf="@+id/tvAge"
                    app:layout_constraintTop_toBottomOf="@+id/tvUserName" />

                <TextView
                    android:id="@+id/textView18"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:text="@string/about_me"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_16sdp"
                    app:layout_constraintStart_toStartOf="@+id/tvAge"
                    app:layout_constraintTop_toBottomOf="@+id/tvAge" />

                <EditText
                    android:id="@+id/etAboutMe"
                    android:layout_width="@dimen/_280sdp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_marginEnd="@dimen/_15sdp"
                    android:ems="10"
                    android:gravity="start|top"
                    android:inputType="textMultiLine"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="@id/textView18"
                    app:layout_constraintTop_toBottomOf="@+id/textView18" />

                <TextView
                    android:id="@+id/textView19"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:text="@string/i_enjoy_eating"
                    android:textColor="#201D1D"
                    android:textSize="@dimen/_14sdp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="@+id/tvUserName"
                    app:layout_constraintTop_toBottomOf="@+id/etAboutMe" />

                <TextView
                    android:id="@+id/textView20"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:text="@string/i_am_down_to_eat"
                    android:textColor="#201D1D"
                    android:textSize="@dimen/_14sdp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="@+id/tvUserName"
                    app:layout_constraintTop_toBottomOf="@+id/chipGroup" />

                <TextView
                    android:id="@+id/textView21"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:text="@string/i_rather_not_eat"
                    android:textColor="#201D1D"
                    android:textSize="@dimen/_14sdp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="@+id/tvUserName"
                    app:layout_constraintTop_toBottomOf="@+id/textView20" />

                <TextView
                    android:id="@+id/textView22"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:text="@string/i_rather_not_talk_about"
                    android:textColor="#201D1D"
                    android:textSize="@dimen/_14sdp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="@+id/tvUserName"
                    app:layout_constraintTop_toBottomOf="@+id/textView21" />

                <Button
                    android:id="@+id/btnConfirmFinishProfile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:layout_marginBottom="30dp"
                    android:background="@drawable/custom_rounded_corners"
                    android:fontFamily="@font/segoe_ui_bold"
                    android:textColor="@color/background_white"
                    android:text="@string/confirm"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView22" />

                <com.google.android.material.chip.ChipGroup
                    android:id="@+id/chipGroup"
                    android:layout_width="@dimen/_270sdp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_marginEnd="@dimen/_15sdp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="@+id/textView19"
                    app:layout_constraintTop_toBottomOf="@+id/textView19">

                </com.google.android.material.chip.ChipGroup>

            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>
    </LinearLayout>
</layout>